Updated db versions upd router history work

--- a/src/translations/ru.json
+++ b/src/translations/ru.json
@@ -28,7 +28,9 @@
   "app.refreshButton.label": "Обновить",
 
   "app.loginTitle": "Вход",
+  "app.login": "Вход",
   "app.signupTitle": "Регистрация",
+  "app.signup": "Регистрация",
 
   "app.errors.required": "Обязательное поле",
 
