implemented wna card to print

--- a/src/translations/ru.json
+++ b/src/translations/ru.json
@@ -11,8 +11,10 @@
   "app.fullName": "Ф.И.О",
   "app.home": "Главная",
   "app.issuedBy": "Выдано",
+  "app.issueMethod": "Способ выдачи",
   "app.name": "Имя",
   "app.nessesaryCount": "Необходимое количество",
+  "app.PPE": "СИЗ",
   "app.PPEAcceptedSign": "Подпись принявшего СИЗ",
   "app.PPEGetSign": "Подпись получившего СИЗ",
   "app.PPEPassedSign": "Подпись сдавшего СИЗ",
@@ -23,9 +25,13 @@
   "app.personalNumber": "Табельный номер",
   "app.profile": "Профиль",
   "app.repeatPassword": "Еще раз",
+  "app.receiptSign": "Расписка в получении",
   "app.sign": "Подпись",
   "app.title": "Название",
   "app.wear": "Износ",
+  "app.WNA": "СОС",
+  "app.WNAType": "Вид СОС",
+  "app.WNAGetSign": "Расписка в получении",
 
   "app.bodyValue": "Значение параметра",
   "app.bodyValues": "Значения параметра",
