implemented user edition on client

--- a/src/translations/ru.json
+++ b/src/translations/ru.json
@@ -3,6 +3,7 @@
 
   "app.actions": "Действия",
   "app.actualCount": "Фактическое количество",
+  "app.area": "Участок",
   "app.approve": "Подтвердить",
   "app.certificateNumber": "№ сертификата",
   "app.count": "Количество",
@@ -14,6 +15,7 @@
   "app.issueMethod": "Способ выдачи",
   "app.name": "Имя",
   "app.nessesaryCount": "Необходимое количество",
+  "app.newPassword": "Новый пароль",
   "app.PPE": "СИЗ",
   "app.PPEAcceptedSign": "Подпись принявшего СИЗ",
   "app.PPEGetSign": "Подпись получившего СИЗ",
@@ -27,7 +29,9 @@
   "app.repeatPassword": "Еще раз",
   "app.receiptSign": "Расписка в получении",
   "app.sign": "Подпись",
+  "app.save": "Сохранить",
   "app.title": "Название",
+  "app.update": "Обновить",
   "app.wear": "Износ",
   "app.WNA": "СОС",
   "app.WNAType": "Вид СОС",
