upd position translation

--- a/src/translations/ru.json
+++ b/src/translations/ru.json
@@ -43,8 +43,8 @@
   "app.bodyParams": "Параметры тела",
   "app.entity": "Снаряжение",
   "app.entities": "Снаряжение",
-  "app.position": "Должность",
-  "app.positions": "Должности",
+  "app.position": "Профессия",
+  "app.positions": "Профессии",
   "app.employee": "Работник",
   "app.employees": "Работники",
   "app.history": "История",
