upd positions page title

--- a/src/translations/ru.json
+++ b/src/translations/ru.json
@@ -79,7 +79,7 @@
 
   "containers.BodyParamsItemPage.pageTitle": "Параметр тела",
 
-  "containers.PositionsPage.pageTitle": "Должности",
+  "containers.PositionsPage.pageTitle": "Профессии",
 
   "containers.EntitiesPage.pageTitle": "Снаряжение",
 
